WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
38800
JavaScriptCore build breaks with some combinations of JIT features disabled
https://bugs.webkit.org/show_bug.cgi?id=38800
Summary
JavaScriptCore build breaks with some combinations of JIT features disabled
Caio Marcelo de Oliveira Filho
Reported
2010-05-08 06:09:47 PDT
With JIT enabled, but disabling ENABLE_JIT_OPTIMIZE_CALL or ENABLE_JIT_OPTIMIZE_PROPERTY_ACCESS (and consequently ENABLE_JIT_OPTIMIZE_METHOD_CALLS), the build breaks due to references to unknown variables in a UNUSED_PARAM. Patch follows.
Attachments
Remove outdated UNUSED_PARAMs
(2.40 KB, patch)
2010-05-08 06:11 PDT
,
Caio Marcelo de Oliveira Filho
eric
: review+
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
Rebased patch
(2.71 KB, patch)
2010-05-09 09:20 PDT
,
Caio Marcelo de Oliveira Filho
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Caio Marcelo de Oliveira Filho
Comment 1
2010-05-08 06:11:53 PDT
Created
attachment 55474
[details]
Remove outdated UNUSED_PARAMs
Eric Seidel (no email)
Comment 2
2010-05-08 23:17:44 PDT
Comment on
attachment 55474
[details]
Remove outdated UNUSED_PARAMs OK.
WebKit Commit Bot
Comment 3
2010-05-08 23:46:19 PDT
Comment on
attachment 55474
[details]
Remove outdated UNUSED_PARAMs Rejecting patch 55474 from commit-queue. Failed to run "[u'/Users/eseidel/Projects/CommitQueue/WebKitTools/Scripts/svn-apply', u'--reviewer', u'Eric Seidel', u'--force']" exit_code: 1 Parsed 2 diffs from patch file(s). patching file JavaScriptCore/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file JavaScriptCore/jit/JITOpcodes.cpp Hunk #1 FAILED at 403. Hunk #2 succeeded at 458 (offset -1486 lines). 1 out of 2 hunks FAILED -- saving rejects to file JavaScriptCore/jit/JITOpcodes.cpp.rej Full output:
http://webkit-commit-queue.appspot.com/results/2218088
Caio Marcelo de Oliveira Filho
Comment 4
2010-05-09 09:20:28 PDT
Created
attachment 55502
[details]
Rebased patch Rebased since changes are now spread in two files due to recent split in JITOpcodes.cpp.
Eric Seidel (no email)
Comment 5
2010-05-10 13:00:35 PDT
Comment on
attachment 55502
[details]
Rebased patch OK.
WebKit Commit Bot
Comment 6
2010-05-11 10:16:29 PDT
Comment on
attachment 55502
[details]
Rebased patch Rejecting patch 55502 from commit-queue. Failed to run "['WebKitTools/Scripts/run-webkit-tests', '--no-launch-safari', '--exit-after-n-failures=1', '--quiet']" exit_code: 1 Last 500 characters of output: that name could be found Testing 18328 test cases. media/video-loop.html -> timed out Sampling process 66199 for 10 seconds with 10 milliseconds of run time between samples Sampling completed, processing symbols... Sample analysis of process 66199 written to file /Users/eseidel/Library/Logs/DumpRenderTree/HangReport.txt Exiting early after 1 failures. 14927 tests run. 432.81s total testing time 14926 test cases (99%) succeeded 1 test case (<1%) timed out 12 test cases (<1%) had stderr output Full output:
http://webkit-commit-queue.appspot.com/results/2184135
Caio Marcelo de Oliveira Filho
Comment 7
2010-05-11 10:36:37 PDT
Comment on
attachment 55502
[details]
Rebased patch Requesting cq again as it seems to have been hit by a flaky test.
Eric Seidel (no email)
Comment 8
2010-05-11 11:12:10 PDT
This false rejection was caused by
bug 38912
.
WebKit Commit Bot
Comment 9
2010-05-12 19:26:09 PDT
Comment on
attachment 55502
[details]
Rebased patch Clearing flags on attachment: 55502 Committed
r59334
: <
http://trac.webkit.org/changeset/59334
>
WebKit Commit Bot
Comment 10
2010-05-12 19:26:15 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug