2010-05-12  Caio Marcelo de Oliveira Filho  <caio.oliveira@openbossa.org>

Reviewed by Eric Seidel.

        JavaScriptCore: fix build when some optimizations are disabled
        https://bugs.webkit.org/show_bug.cgi?id=38800

        Remove outdated UNUSED_PARAMs when using JIT but with
        ENABLE_JIT_OPTIMIZE_CALL and ENABLE_JIT_OPTIMIZE_PROPERTY_ACCESS
        disabled.

        * jit/JITOpcodes.cpp:
        * jit/JITOpcodes32_64.cpp:

Canonical link: https://commits.webkit.org/50523@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@59334 268f45cc-cd09-0410-ab3c-d52691b4dbfc